// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createTemplateConstraint request eager instantiation 1`] = `
[
  {
    "__typename": "TaskEdge",
    "node": {
      "__typename": "Task",
      "displayName": {
        "__typename": "DisplayName",
        "name": {
          "__typename": "DynamicString",
          "value": "Idle Time",
        },
      },
      "fields": {
        "__typename": "FieldConnection",
        "edges": [
          {
            "__typename": "FieldEdge",
            "node": {
              "__typename": "Field",
              "name": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Override Start Time",
                },
              },
              "value": {
                "__typename": "TimestampValue",
              },
            },
          },
          {
            "__typename": "FieldEdge",
            "node": {
              "__typename": "Field",
              "name": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Override End Time",
                },
              },
              "value": {
                "__typename": "TimestampValue",
              },
            },
          },
          {
            "__typename": "FieldEdge",
            "node": {
              "__typename": "Field",
              "name": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Description",
                },
              },
              "value": {
                "__typename": "StringValue",
                "string": null,
              },
            },
          },
        ],
      },
    },
  },
]
`;

exports[`createTemplateConstraint request eager instantiation with field-level edits 1`] = `
[
  {
    "__typename": "TaskEdge",
    "node": {
      "__typename": "Task",
      "displayName": {
        "__typename": "DisplayName",
        "name": {
          "__typename": "DynamicString",
          "value": "Idle Time",
        },
      },
      "fields": {
        "__typename": "FieldConnection",
        "edges": [
          {
            "__typename": "FieldEdge",
            "node": {
              "__typename": "Field",
              "name": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Override Start Time",
                },
              },
              "value": {
                "__typename": "TimestampValue",
              },
            },
          },
          {
            "__typename": "FieldEdge",
            "node": {
              "__typename": "Field",
              "name": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Override End Time",
                },
              },
              "value": {
                "__typename": "TimestampValue",
              },
            },
          },
          {
            "__typename": "FieldEdge",
            "node": {
              "__typename": "Field",
              "name": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Description",
                },
              },
              "value": {
                "__typename": "StringValue",
                "string": "First try?",
              },
            },
          },
        ],
      },
    },
  },
]
`;
